docs/tests/parser/expressions/invalid/ExprTernaryMissingThenAndColon.b
fn void test() {
    let int x = true ?;
}
